back to fixed position, move overflow:hidden to desktop size

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -4,14 +4,12 @@
 $desktopPalmWidth: 1000px;
 
 .header {
-  // position: fixed;
-  // top:0;
-  // left:0;
-  position:relative;
+  position: fixed;
+  top:0;
+  left:0;
   display: flex;
   width:100%;
   height: 80px;
-  overflow: hidden;
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 
   background: linear-gradient(
@@ -28,6 +26,7 @@ $desktopPalmWidth: 1000px;
     position:relative;
     height:800px;
     box-shadow:none;
+    overflow: hidden;
   }
 }
 .header.subpage{
